--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
 - pip install -r requirements.txt
 
 build_script:
-- flet pack main.py --name "Proyects Manager" --icon proyectManager.ico --product-name ProyectManager --product-version "1.0.0"
+- flet pack main.py --name "Proyects Manager" --icon assets\proyectManager.ico --product-name ProyectManager --product-version "1.0.0"
 
 test: off
 
