--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,13 @@ build_script:
 test: off
 
 # Publish artifacts to GitHub Releases on "tag" builds
+skip_tags: true
 deploy:
   provider: GitHub
   auth_token: $(GITHUB_TOKEN)
+  tag: $(APPVEYOR_REPO_TAG_NAME)
   on:
     APPVEYOR_REPO_TAG: true
-
 #
 #   Windows package
 # 
