--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,7 @@ test: off
 deploy:
   provider: GitHub
   auth_token: $(GITHUB_TOKEN)
+  tag: $(APPVEYOR_REPO_TAG_NAME)
   on:
     APPVEYOR_REPO_TAG: true
 #
