--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ for:
     - image: Visual Studio 2019
 
   after_build:
-  - 7z a counter-windows.zip %CD%\dist\*.exe
+  - 7z a proyect-manager-windows.zip %CD%\dist\*.exe
 
   artifacts:
   - path: proyect-manager-windows.zip
