--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ stack: python 3.10
 environment:
   GITHUB_TOKEN:
     secure: /vAqj/nAkorMNahSdPaw88gmv6J2nQ4R8H2TmoT69XEzqxDNOlLVDeauxDwI84skU8esQR2GPO36PtcpBXmcHSehDOx69gBptB+IW4BSFnzEafXSkeyJNm1md4ech7X+
+  APPVEYOR_REPO_TAG: true
 
 install:
 - pip install -r requirements.txt
