--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,4 +38,4 @@ for:
   - 7z a proyect-manager-windows.zip %CD%\dist\*.exe
 
   artifacts:
-  - path: dist/Proyects Manager.zip
+  - path: "dist/Proyects Manager.exe"
