--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
 - pip install -r requirements.txt
 
 build_script:
-- flet pack main.py --name proyectManager --icon proyectManager.ico --product-name proyectManager --product-version "1.0.0"
+- flet pack main.py --name proyectManager --icon assets\proyectManager.ico --product-name proyectManager --product-version "1.0.0" --add-data "assets;assets"
 
 test: off
 
