--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ stack: python 3.10
 environment:
   GITHUB_TOKEN:
     secure: /vAqj/nAkorMNahSdPaw87qExCfPoD0jvWCKE3rGMndVth55ovxVhPhQiLzkCWgYcBbGxKXSy84WuxhKQI+3WQJ/xeVcYRzy50j4f5TKN2nKZrIRlxUPSnwNfiXyCGYX
+  APPVEYOR_REPO_TAG: true
 
 install:
 - pip install -r requirements.txt
