--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ stack: python 3.10
 environment:
   GITHUB_TOKEN:
     secure: /vAqj/nAkorMNahSdPaw87qExCfPoD0jvWCKE3rGMndVth55ovxVhPhQiLzkCWgYcBbGxKXSy84WuxhKQI+3WQJ/xeVcYRzy50j4f5TKN2nKZrIRlxUPSnwNfiXyCGYX
+  APPVEYOR_REPO_TAG: true
 
 install:
 - pip install -r requirements.txt
@@ -35,10 +36,10 @@ for:
     - image: Visual Studio 2019
 
   after_build:
-  - 7z a counter-windows.zip %CD%\dist\*.exe
+  - 7z a proyect-manager-windows.zip %CD%\dist\*.exe
 
   artifacts:
-  - path: counter-windows.zip
+  - path: proyect-manager-windows.zip
 
 #
 #   macOS package
